Adicionando Teste de Integração aos Repository, melhorando as consultas dos sistema, adicionando geração de documento adoc, separação do swagger.